first test wont work. Keeps complaining that supertest is not a module. I took a suggested installation and still it wont work

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.19.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
